done the server rendering

--- a/src/app/sidebar/sidebar.component.html
+++ b/src/app/sidebar/sidebar.component.html
@@ -6,7 +6,7 @@
         <symbol id="home-txt">
           <text x="50%" y="85%" text-anchor="middle">N</text>
         </symbol>
-        <g>
+        <g *ngIf="!ngHtml">
           <use xlink:href="#home-txt" class="stroke"></use>
           <use xlink:href="#home-txt" class="stroke"></use>
           <use xlink:href="#home-txt" class="stroke"></use>
